# emergent-hackathon-project

./: README.md  hdfd.html
apps/api/: .env.example  package-lock.json  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/20260212174734_init/: migration.sql
apps/api/src/: app.ts  config.ts  index.ts
apps/api/src/__tests__/: apiResponse.test.ts  generateApiKey.test.ts  utils.test.ts
apps/api/src/core/: api-error.ts  api-response.ts  async-handler.ts  auth-utils.ts  cookie-utils.ts  jwt-utils.ts  logger.ts  utils.ts
apps/api/src/database/: index.ts
apps/api/src/docs/: swagger.ts
apps/api/src/helpers/: generate-api-key.ts  stats.helper.ts  time.ts  validator.ts
apps/api/src/middlewares/: auth.middleware.ts  authorize.middleware.ts  error.middleware.ts  permission.middleware.ts  validator.middleware.ts
apps/api/src/routes/: index.ts
apps/api/src/services/: auth.service.ts  email.service.ts  redis.service.ts  s3.service.ts  ses.service.ts
apps/api/src/types/: app-requests.d.ts  user.ts
apps/ml-server/: .gitignore  README.md  pyproject.toml  run_worker.py
apps/ml-server/src/: main.py  worker.py
apps/ml-server/src/__test__/: local_test.py
apps/ml-server/src/services/: api_client.py  classifier.py  face_processor.py  redis_service.py  s3_client.py  vector_db.py
apps/web/: package-lock.json  package.json
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/contexts/: AuthContext.tsx
apps/web/src/lib/: api.ts  date-time.ts  wedding-templates.ts
(+72 files in other folders)
