[project]
name = "ml-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.47",
    "dotenv>=0.9.9",
    "insightface>=0.7.3",
    "onnxruntime>=1.24.1",
    "pinecone>=8.0.1",
    "redis>=5.0.0",
    "requests>=2.31.0",
]
